# sasl-browserid

./: .gitignore  .gitmodules  INSTALL.md  Makefile.am  Makefile.in  README  README.md  Vagrantfile  config.h.in  configure  configure.ac  libtool  my_make.sh  sasl-Makefile-diff.txt  slapd_sasl_test.py
configs/: browserid_session.ddl  sample.conf  slapd.conf  slapd.conf.fragment.txt
docs/: sasl-browserid-design.md  security_block_unknown_email.md
plugings/: browserid.c  browserid_init.c
plugins/: Makefile.am  Makefile.in  browserid.c  browserid_init.c  session.c  session.h  verifier.c  verifier.h
test/: README.md  config.py  config.py-dist  curl_main.c  functional_test.py  main.c  my_make.sh  my_run.sh  mysql_main.c  slapd.py  slapd_sasl_test.php  timeout.json  unit_privileged_test_suite.py
test/sasl/: no_browserid_slapd.conf
test/slapd/: slapd.conf-dist  users.ldif
test/www/: browserid_debug.html  success.json
